# BERTokenScope

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-models.txt  requirements.txt
.streamlit/: config.toml
api/: main.py
app/: streamlit_app.py
attention/: __init__.py  engine.py  heatmaps.py  metrics.py  rollout.py  static_diagram.py  token_analysis.py
ber_tokenscope/: __init__.py  model_adapters.py  schemas.py  settings.py
configs/: settings.yaml
deployment/: __init__.py  gunicorn_conf.py  nginx.conf  worker.py
docs/: architecture.md  cicd.md  data-governance.md  deployment-architecture.md  model-serving.md  operations.md  portfolio-deployment.md  roadmap.md  security.md  streamlit-cloud.md  testing.md
embeddings/: __init__.py  clustering.py  dimensionality_reduction.py  embedding_generator.py  engine.py  similarity.py
explainability/: __init__.py  counterfactuals.py  engine.py  token_importance.py
financial_nlp/: __init__.py  finbert_pipeline.py  lexicons.py  sentiment.py  transcript_analysis.py
governance/: __init__.py  audit.py  redaction.py  retention.py
model_comparison/: __init__.py  engine.py  profiles.py
model_serving/: __init__.py  jobs.py  registry.py  runtime.py
observability/: __init__.py  logging.py  metrics.py  middleware.py  tracker.py
persistence/: database.py  idempotency_repository.py  run_repository.py
scripts/: ci_local.ps1  load_probe.py  run_api.ps1  run_app.ps1  smoke_api.ps1
security/: auth.py  errors.py  middleware.py
(+27 files in other folders)
